$Id$

Version 0.7.1 (...)

- Added grizzled.misc module and ReadOnly class.

---------------------------------------------------------------------------
Version 0.7 (12 June, 2008)

- Deprecated grizzled.os.file_separator(). Silly me, there's a standard
  os.path.sep variable.
- In grizzled.db, the MySQL index metadata function wasn't detecting column
  uniqueness properly.
- In grizzled.db, the PostgreSQL table metadata function wasn't detecting
  NULL/NOT NULL properly.
- Added find_command() and path_elements() functions to grizzled.os.
- Documentation format changed from default Epydoc to reStructuredText.
- Fixed bug in grizzled.db.add_driver() function that prevented a driver
  from being added programmatically.
- Added class_for_name() function to grizzled.system module.
- grizzled.config now uses grizzled.collections.OrderedDict
- In grizzled.config, Configuration.sections() is now a property.

---------------------------------------------------------------------------
Version 0.6 (30 May, 2008)

- Removed deprecated methods.
- Removed deprecated optparse module.
- Added MySQL-specific logic for table metadata to grizzled.db
- Added PostgreSQL-specific logic for table metadata to grizzled.db
- Added ability to retrieve list of database tables to grizzled.db.
- Added grizzled.io.filelock.locked_file() function, for use with the
  "with" statement.

---------------------------------------------------------------------------

Version 0.5 (28 May, 2008)

- Added grizzled.sys module, with python_version(), python_version_string(),
  split_python_version() and ensure_version() functions.
- Added grizzled.file.universal_path() and grizzled.file.native_path().
  A universal path always uses a '/' as the file separator, no matter what
  the underlying operating system uses. A native path uses the underlying
  operating system's path separator. These two functions convert between the
  two notations.